RESOLVED FIXED77544
[GTK] unittests/testloading crashes
https://bugs.webkit.org/show_bug.cgi?id=77544
Summary [GTK] unittests/testloading crashes
Philippe Normand
Reported 2012-02-01 04:34:37 PST
/webkit/loading/error: GLib-GObject-WARNING **: invalid (NULL) pointer instance Program received signal SIGTRAP, Trace/breakpoint trap. g_logv (log_domain=0x7ffff2134d84 "GLib-GObject", log_level=<optimized out>, format= 0x7ffff213c6c0 "invalid (NULL) pointer instance", args1=0x7fffffffc7b8) at gmessages.c:765 765 g_private_set (&g_log_depth, GUINT_TO_POINTER (depth)); (gdb) bt #0 g_logv (log_domain=0x7ffff2134d84 "GLib-GObject", log_level=<optimized out>, format= 0x7ffff213c6c0 "invalid (NULL) pointer instance", args1=0x7fffffffc7b8) at gmessages.c:765 #1 0x00007ffff1e27c32 in g_log (log_domain=<optimized out>, log_level=<optimized out>, format=<optimized out>) at gmessages.c:792 #2 0x00007ffff212dfea in g_type_check_instance (type_instance=<optimized out>) at gtype.c:4084 #3 0x00007ffff21250a3 in g_signal_emit_by_name (instance=0x0, detailed_signal= 0x7ffff4e3f530 "load-failed") at gsignal.c:3115 #4 0x00007ffff3ec854e in WebKit::FrameLoaderClient::dispatchDidFailLoading (this=0x5314f0, loader=0x46c000, identifier=3, error=...) at ../../Source/WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp:1056 #5 0x00007ffff45f9c24 in WebCore::ResourceLoadNotifier::didFailToLoad (this=0x4b8350, loader= 0x4dcd10, error=...) at ../../Source/WebCore/loader/ResourceLoadNotifier.cpp:98 #6 0x00007ffff45eb96e in WebCore::MainResourceLoader::receivedError (this=0x4dcd10, error=...) at ../../Source/WebCore/loader/MainResourceLoader.cpp:96 #7 0x00007ffff45ed4ed in WebCore::MainResourceLoader::didFail (this=0x4dcd10, error=...) at ../../Source/WebCore/loader/MainResourceLoader.cpp:501 #8 0x00007ffff45f8f8d in WebCore::ResourceLoader::didFail (this=0x4dcd10, error=...) at ../../Source/WebCore/loader/ResourceLoader.cpp:462 #9 0x00007ffff478ce48 in WebCore::sendRequestCallback (source=0x5461e0, res=0x465060, data= 0x543980) at ../../Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:306 #10 0x00007ffff21bae8d in g_simple_async_result_complete (simple=0x465060) at gsimpleasyncresult.c:744 #11 0x00007ffff22d678b in http_input_stream_ready_cb (source=<optimized out>, result=<optimized out>, user_data=0x547590) at soup-request-http.c:136 #12 0x00007ffff22c9d78 in wrapper_callback (source_object=0x5229c0, res=0x4b51e0, user_data= 0x547590) at soup-http-input-stream.c:550 #13 0x00007ffff21bae8d in g_simple_async_result_complete (simple=0x4b51e0) at gsimpleasyncresult.c:744 #14 0x00007ffff22c9e8f in send_async_finished (stream=<optimized out>) at soup-http-input-stream.c:575 #15 0x00007ffff210d834 in g_closure_invoke (closure=0x4dd6e0, return_value=0x0, n_param_values=1, param_values=0x4898a0, invocation_hint=<optimized out>) at gclosure.c:774 #16 0x00007ffff211d235 in signal_emit_unlocked_R (node=<optimized out>, detail=0, instance=<optimized out>, emission_return=0x0, instance_and_params=0x4898a0) at gsignal.c:3302 #17 0x00007ffff2124e4b in g_signal_emit_valist (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>, var_args=0x7fffffffd0c8) at gsignal.c:3033 #18 0x00007ffff2125012 in g_signal_emit (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>) at gsignal.c:3090 #19 0x00007ffff22ddc03 in process_queue_item (item=0x484890, should_prune=0x7fffffffd1ec, loop=1) at soup-session-async.c:423 #20 0x00007ffff22dde8b in run_queue (sa=<optimized out>) at soup-session-async.c:465 #21 0x00007ffff22de690 in idle_run_queue (sa=0x476090) at soup-session-async.c:489 #22 0x00007ffff1e2080a in g_main_dispatch (context=0x4356c0) at gmain.c:2513 #23 g_main_context_dispatch (context=0x4356c0) at gmain.c:3050 #24 0x00007ffff1e20bd0 in g_main_context_iterate (dispatch=1, block=<optimized out>, context= 0x4356c0, self=<optimized out>) at gmain.c:3121 #25 g_main_context_iterate (context=0x4356c0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3058 #26 0x00007ffff1e20fca in g_main_loop_run (loop=0x543140) at gmain.c:3315 #27 0x000000000040226f in test_loading_error (fixture=0x520320, data=0x0) at ../../Source/WebKit/gtk/tests/testloading.c:220 #28 0x00007ffff1e410eb in test_case_run (tc=0x451160) at gtestutils.c:1595 #29 g_test_run_suite_internal (suite=0x44f4e0, path=0x7ffff1e85db1 "") at gtestutils.c:1648 #30 0x00007ffff1e41266 in g_test_run_suite_internal (suite=<optimized out>, path= 0x7ffff1e85db1 "") at gtestutils.c:1659 #31 0x00007ffff1e41266 in g_test_run_suite_internal (suite=<optimized out>, path= 0x7ffff1e85db1 "") at gtestutils.c:1659 #32 0x00007ffff1e415bb in g_test_run_suite (suite=0x44f320) at gtestutils.c:1704 ---Type <return> to continue, or q <return> to quit--- #33 0x0000000000402db3 in main (argc=1, argv=0x7fffffffd758) at ../../Source/WebKit/gtk/tests/testloading.c:434
Attachments
Patch (2.13 KB, patch)
2012-02-01 04:37 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2012-02-01 04:37:13 PST
WebKit Review Bot
Comment 2 2012-02-01 04:39:14 PST
Attachment 124929 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/gtk/ChangeLog', u'Source/Web..." exit_code: 1 Source/WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp:1053: Use 0 or null instead of NULL (even in *comments*). [readability/null] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Xan Lopez
Comment 3 2012-02-01 07:42:59 PST
Comment on attachment 124929 [details] Patch OK.
WebKit Review Bot
Comment 4 2012-02-01 08:50:47 PST
Comment on attachment 124929 [details] Patch Clearing flags on attachment: 124929 Committed r106467: <http://trac.webkit.org/changeset/106467>
WebKit Review Bot
Comment 5 2012-02-01 08:50:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.