[GTK] unittests/testloading crashes https://bugs.webkit.org/show_bug.cgi?id=77544

Patch by Philippe Normand <pnormand@igalia.com> on 2012-02-01
Reviewed by Xan Lopez.

* WebCoreSupport/FrameLoaderClientGtk.cpp:
(WebKit::FrameLoaderClient::dispatchDidFailLoading): Bail out
early from dispatchDidFailLoading if the error is the result of an
interrupted load.

Canonical link: https://commits.webkit.org/94421@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106467 268f45cc-cd09-0410-ab3c-d52691b4dbfc